export enum Genero {
  feminino = 'feminino',
  masculino = 'masculino',
}
