export enum TipoPessoa {
  tecnico = 'tecnico',
  atleta = 'atleta',
  auxiliar = 'auxiliar',
}
