@startuml er
title ER - Equipes

enum genero{
	masculino
	feminino
}

entity ligas {
	* id : uuid <<generated>>
	--
	* genero : genero
	* comeca_em : timestamp
	nome : text
	serie : text = A
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity equipes {
	* id : uuid <<generated>>
	--
	* nome : text
	url_brasao : text
	* id_ginasio : uuid <<FK>>  
	* apta : boolean = false
	descricao_aptidao : json
	'min 12 per tournament'
	'max 22 per tounament'
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity ginasios {
	* id : uuid <<generated>>
	--
	* nome : text
	* cidade : text
	* estado : text
	* criado_em : timestamp
	* atualizado_em : timestamp
}

enum tipo_pessoa {
	tecnico 
	atleta
	arbitro
	auxiliares
	delegados
}

entity pessoas {
	* id : uuid <generated>>
	--
	* nome : text
	* documento : text <<UQ>>
	* genero : genero
	* data_nascimento : timestamp
	* documento_cbv : text
	* tipo : tipo_pessoa
	* criado_em : timestamp
	* atualizado_em : timestamp
}

enum posicoes {
	ponta
	oposto
	central
	libero
	levantador
}

enum partida_status {
	agendada
	em_andamento
	concluida
	cancelada
}

entity atletas{
	* id : uuid <<generated>>
	--
	* posicao: posicao
	* numero : tinyint
	* id_pessoa : uuid <<FK>>
	* id_equipe : uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity tecnicos{
	* id : uuid <<generated>>
	--
	* documento_cref: text
	* id_pessoa: uuid <<FK>>
	* id_equipe : uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity arbitros {
	* id : uuid <<generated>>
	--
	* id_pessoa : uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

enum tipo_auxiliar {
	assistente_medico
	auxiliar_tecnico
	preparador_fisico
	fisioterapeuta
	medico
	massagista
}

entity auxiliares {
	* id : uuid <<generated>>
	--
	tipo : tipo_auxiliar
	* id_pessoa : uuid <<FK>>
	* id_equipe : uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity delegados {
	* id : uuid <<generated>>
	--
	* id_pessoa: uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

entity partidas {
	* id : uuid <<generated>>
	--
	* id_delegado : uuid <<FK>>
	* id_arbitro : uuid <<FK>>
	* id_ginasio : uuid <<FK>>
	* status : partida_status
	* comecou_em : timestamp
	* finalizou_em : timestamp
	* id_time_ganhador : uuid <<FK>>
	* id_time_perdedor : uuid <<FK>>
	* criado_em : timestamp
	* atualizado_em : timestamp
}

ligas ||--o{ "<= 12" equipes
ligas ||--o{ arbitros
ligas ||--o{ delegados
equipes ||--o{ "<= 22" atletas : no mínimo 12 para o time estar regular
equipes "1" --|| "1" tecnicos
equipes ||--o{ "*" auxiliares
equipes "1" ||-- "1" ginasios
partidas "1" ||-- "1" arbitros
partidas "1" ||-- "1" delegados
partidas "1" ||-- "1" ginasios
partidas "1" ||--o{ "2" equipes : time vencedor e time derrotado

atletas ||-- pessoas
tecnicos ||-- pessoas
auxiliares ||-- pessoas
arbitros ||-- pessoas
delegados ||-- pessoas

@enduml